# app-platform

./: .gitignore  README.md  pyproject.toml
app_platform/: __init__.py  pyproject.toml
app_platform/auth/: __init__.py  dependencies.py  google.py  protocols.py  service.py  stores.py
app_platform/db/: __init__.py  client_base.py  exceptions.py  handlers.py  migration.py  pool.py  session.py
app_platform/gateway/: __init__.py  models.py  proxy.py  session.py
app_platform/gateway/tests/: test_proxy.py  test_session.py
app_platform/logging/: __init__.py  core.py  decorators.py  workflow_timing.py
app_platform/middleware/: __init__.py  cors.py  error_handlers.py  rate_limiter.py  sessions.py  timing.py
tests/: test_app_lifecycle.py  test_auth_dependencies.py  test_auth_google.py  test_auth_protocols.py  test_auth_service.py  test_auth_stores_memory.py  test_db_client_base.py  test_db_exceptions.py  test_db_migration.py  test_db_pool.py  test_db_session.py  test_gateway_models.py  test_gateway_proxy.py  test_gateway_session.py  test_import_chains.py  test_logging_core.py  test_logging_decorators.py  test_middleware.py  test_rate_limiter.py  test_session_bug_fix.py  test_shim_auth.py  test_shim_db.py  test_shim_gateway.py  test_shim_logging.py  test_shim_rate_limiter.py  test_timing_logging.py  test_timing_middleware.py
