[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app-platform"
version = "0.8.0"
description = "Generic web app infrastructure: PostgreSQL pooling, structured logging, rate limiting, FastAPI middleware, auth service, gateway proxy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Henry Chien" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "psycopg2-binary>=2.9,<3",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100,<1",
    "starlette>=1.0,<2",
    "slowapi>=0.1.9,<1",
    "itsdangerous>=2.0,<3",
]
auth-google = [
    "google-auth>=2.0,<3",
    "requests>=2.20,<3",
]
gateway = [
    "httpx>=0.24,<1",
    "fastapi>=0.100,<1",
]
all = ["app-platform[fastapi,auth-google,gateway]"]

[project.urls]
Homepage = "https://github.com/henrysouchien/app-platform"
Repository = "https://github.com/henrysouchien/app-platform"

[tool.hatchling.build]
packages = ["app_platform"]
